commandsGrammar/grammar.js
// Generated by Peggy 1.2.0.
//
// https://peggyjs.org/

"use strict";

function peg$subclass(child, parent) {
  function C() {
    this.constructor = child;
  }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) {
    return str;
  }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function (sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var loc = this.location.source + ":" + s.line + ":" + s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", s.line.toString().length);
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      str +=
        "\n --> " +
        loc +
        "\n" +
        filler +
        " |\n" +
        s.line +
        " | " +
        line +
        "\n" +
        filler +
        " | " +
        peg$padEnd("", s.column - 1) +
        peg$padEnd("", last - s.column, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function (expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function (expectation) {
      return '"' + literalEscape(expectation.text) + '"';
    },

    class: function (expectation) {
      var escapedParts = expectation.parts.map(function (part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
    },

    any: function () {
      return "any character";
    },

    end: function () {
      return "end of input";
    },

    other: function (expectation) {
      return expectation.description;
    },
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g, '\\"')
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g, function (ch) {
        return "\\x0" + hex(ch);
      })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function (ch) {
        return "\\x" + hex(ch);
      });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g, "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g, function (ch) {
        return "\\x0" + hex(ch);
      })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function (ch) {
        return "\\x" + hex(ch);
      });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return (
          descriptions.slice(0, -1).join(", ") +
          ", or " +
          descriptions[descriptions.length - 1]
        );
    }
  }

  function describeFound(found) {
    return found ? '"' + literalEscape(found) + '"' : "end of input";
  }

  return (
    "Expected " +
    describeExpected(expected) +
    " but " +
    describeFound(found) +
    " found."
  );
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Expression: peg$parseExpression };
  var peg$startRuleFunction = peg$parseExpression;

  var peg$c0 = "alexa";
  var peg$c1 = "bibi";
  var peg$c2 = "harry";
  var peg$c3 = "navigate to";
  var peg$c4 = "go to";
  var peg$c5 = "navigiere zu";
  var peg$c6 = "geh zu";
  var peg$c7 = "gehe zu";
  var peg$c8 = "wechsle zu";
  var peg$c9 = "wechsel zu";
  var peg$c10 = "befehle";
  var peg$c11 = "help";
  var peg$c12 = "hilfe";
  var peg$c13 = "recherche";
  var peg$c14 = "gute wissenschaftliche praxis";
  var peg$c15 = "zitieren";
  var peg$c16 = "plagiieren";
  var peg$c17 = "home";
  var peg$c18 = "\xFCbersicht";
  var peg$c19 = "start";
  var peg$c20 = "sitemap";
  var peg$c21 = "site map";
  var peg$c22 = "impressum";
  var peg$c23 = "test";
  var peg$c24 = "stoppen";
  var peg$c25 = "stopp";
  var peg$c26 = "stop";
  var peg$c27 = "beenden";
  var peg$c28 = "cancel";
  var peg$c29 = "abbrechen";
  var peg$c30 = "wait";
  var peg$c31 = "warte";
  var peg$c32 = "warten";
  var peg$c33 = "continue";
  var peg$c34 = "weiter";
  var peg$c35 = "back";
  var peg$c36 = "zur\xFCck";
  var peg$c37 = "turn";
  var peg$c38 = "schalte";
  var peg$c39 = "on";
  var peg$c40 = "ein";
  var peg$c41 = "off";
  var peg$c42 = "aus";
  var peg$c43 = "an";
  var peg$c44 = "voice";
  var peg$c45 = "sprache";
  var peg$c46 = "sprachassistent";
  var peg$c47 = "voice assistant";
  var peg$c48 = "untertitel";
  var peg$c49 = "men\xFC";
  var peg$c50 = "menu";
  var peg$c51 = "w\xE4hle";
  var peg$c52 = "selektiere";
  var peg$c53 = "klicke";
  var peg$c54 = "klick";
  var peg$c55 = "click";
  var peg$c56 = "recherchetipps";
  var peg$c57 = "recherche tipps";
  var peg$c58 = "grundlagen des wissenschaftlichen arbeitens";
  var peg$c59 = "suchstrategie";
  var peg$c60 = "suchtools";
  var peg$c61 = "qualit\xE4t";
  var peg$c62 = "quiz";
  var peg$c63 = "videos";
  var peg$c64 = "1";
  var peg$c65 = "2";
  var peg$c66 = "3";
  var peg$c67 = "4";
  var peg$c68 = "5";
  var peg$c69 = "eins";
  var peg$c70 = "zwei";
  var peg$c71 = "drei";
  var peg$c72 = "vier";
  var peg$c73 = "f\xFCnf";
  var peg$c74 = "best\xE4tigen";
  var peg$c75 = "mein name ist";
  var peg$c76 = " ";
  var peg$c77 = "video";
  var peg$c78 = "spiele";
  var peg$c79 = "spiel";
  var peg$c80 = "halte";
  var peg$c81 = "pausiere";
  var peg$c82 = "play";
  var peg$c83 = "pause";
  var peg$c84 = "stoppe";
  var peg$c85 = "a";
  var peg$c86 = "b";
  var peg$c87 = "c";
  var peg$c88 = "d";
  var peg$c89 = "antwort";

  var peg$r0 = /^[a-zA-Z]/;

  var peg$e0 = peg$literalExpectation("alexa", false);
  var peg$e1 = peg$literalExpectation("bibi", false);
  var peg$e2 = peg$literalExpectation("harry", false);
  var peg$e3 = peg$literalExpectation("navigate to", false);
  var peg$e4 = peg$literalExpectation("go to", false);
  var peg$e5 = peg$literalExpectation("navigiere zu", false);
  var peg$e6 = peg$literalExpectation("geh zu", false);
  var peg$e7 = peg$literalExpectation("gehe zu", false);
  var peg$e8 = peg$literalExpectation("wechsle zu", false);
  var peg$e9 = peg$literalExpectation("wechsel zu", false);
  var peg$e10 = peg$literalExpectation("befehle", false);
  var peg$e11 = peg$literalExpectation("help", false);
  var peg$e12 = peg$literalExpectation("hilfe", false);
  var peg$e13 = peg$literalExpectation("recherche", false);
  var peg$e14 = peg$literalExpectation("gute wissenschaftliche praxis", false);
  var peg$e15 = peg$literalExpectation("zitieren", false);
  var peg$e16 = peg$literalExpectation("plagiieren", false);
  var peg$e17 = peg$literalExpectation("home", false);
  var peg$e18 = peg$literalExpectation("\xFCbersicht", false);
  var peg$e19 = peg$literalExpectation("start", false);
  var peg$e20 = peg$literalExpectation("sitemap", false);
  var peg$e21 = peg$literalExpectation("site map", false);
  var peg$e22 = peg$literalExpectation("impressum", false);
  var peg$e23 = peg$literalExpectation("test", false);
  var peg$e24 = peg$literalExpectation("stoppen", false);
  var peg$e25 = peg$literalExpectation("stopp", false);
  var peg$e26 = peg$literalExpectation("stop", false);
  var peg$e27 = peg$literalExpectation("beenden", false);
  var peg$e28 = peg$literalExpectation("cancel", false);
  var peg$e29 = peg$literalExpectation("abbrechen", false);
  var peg$e30 = peg$literalExpectation("wait", false);
  var peg$e31 = peg$literalExpectation("warte", false);
  var peg$e32 = peg$literalExpectation("warten", false);
  var peg$e33 = peg$literalExpectation("continue", false);
  var peg$e34 = peg$literalExpectation("weiter", false);
  var peg$e35 = peg$literalExpectation("back", false);
  var peg$e36 = peg$literalExpectation("zur\xFCck", false);
  var peg$e37 = peg$literalExpectation("turn", false);
  var peg$e38 = peg$literalExpectation("schalte", false);
  var peg$e39 = peg$literalExpectation("on", false);
  var peg$e40 = peg$literalExpectation("ein", false);
  var peg$e41 = peg$literalExpectation("off", false);
  var peg$e42 = peg$literalExpectation("aus", false);
  var peg$e43 = peg$literalExpectation("an", false);
  var peg$e44 = peg$literalExpectation("voice", false);
  var peg$e45 = peg$literalExpectation("sprache", false);
  var peg$e46 = peg$literalExpectation("sprachassistent", false);
  var peg$e47 = peg$literalExpectation("voice assistant", false);
  var peg$e48 = peg$literalExpectation("untertitel", false);
  var peg$e49 = peg$literalExpectation("men\xFC", false);
  var peg$e50 = peg$literalExpectation("menu", false);
  var peg$e51 = peg$literalExpectation("w\xE4hle", false);
  var peg$e52 = peg$literalExpectation("selektiere", false);
  var peg$e53 = peg$literalExpectation("klicke", false);
  var peg$e54 = peg$literalExpectation("klick", false);
  var peg$e55 = peg$literalExpectation("click", false);
  var peg$e56 = peg$literalExpectation("recherchetipps", false);
  var peg$e57 = peg$literalExpectation("recherche tipps", false);
  var peg$e58 = peg$literalExpectation(
    "grundlagen des wissenschaftlichen arbeitens",
    false
  );
  var peg$e59 = peg$literalExpectation("suchstrategie", false);
  var peg$e60 = peg$literalExpectation("suchtools", false);
  var peg$e61 = peg$literalExpectation("qualit\xE4t", false);
  var peg$e62 = peg$literalExpectation("quiz", false);
  var peg$e63 = peg$literalExpectation("videos", false);
  var peg$e64 = peg$literalExpectation("1", false);
  var peg$e65 = peg$literalExpectation("2", false);
  var peg$e66 = peg$literalExpectation("3", false);
  var peg$e67 = peg$literalExpectation("4", false);
  var peg$e68 = peg$literalExpectation("5", false);
  var peg$e69 = peg$literalExpectation("eins", false);
  var peg$e70 = peg$literalExpectation("zwei", false);
  var peg$e71 = peg$literalExpectation("drei", false);
  var peg$e72 = peg$literalExpectation("vier", false);
  var peg$e73 = peg$literalExpectation("f\xFCnf", false);
  var peg$e74 = peg$literalExpectation("best\xE4tigen", false);
  var peg$e75 = peg$literalExpectation("mein name ist", false);
  var peg$e76 = peg$classExpectation(
    [
      ["a", "z"],
      ["A", "Z"],
    ],
    false,
    false
  );
  var peg$e77 = peg$literalExpectation(" ", false);
  var peg$e78 = peg$literalExpectation("video", false);
  var peg$e79 = peg$literalExpectation("spiele", false);
  var peg$e80 = peg$literalExpectation("spiel", false);
  var peg$e81 = peg$literalExpectation("halte", false);
  var peg$e82 = peg$literalExpectation("pausiere", false);
  var peg$e83 = peg$literalExpectation("play", false);
  var peg$e84 = peg$literalExpectation("pause", false);
  var peg$e85 = peg$literalExpectation("stoppe", false);
  var peg$e86 = peg$literalExpectation("a", false);
  var peg$e87 = peg$literalExpectation("b", false);
  var peg$e88 = peg$literalExpectation("c", false);
  var peg$e89 = peg$literalExpectation("d", false);
  var peg$e90 = peg$literalExpectation("antwort", false);

  var peg$f0 = function (command) {
    return command;
  };
  var peg$f1 = function (trigger, subject) {
    return new NavigateCommand(trigger, subject);
  };
  var peg$f2 = function (subject) {
    return new NavigateCommand(undefined, subject);
  };
  var peg$f3 = function (trigger) {
    return new StopCommand(trigger);
  };
  var peg$f4 = function (trigger) {
    return new CancelCommand(trigger);
  };
  var peg$f5 = function (trigger) {
    return new WaitCommand(trigger);
  };
  var peg$f6 = function (trigger) {
    return new ContinueCommand(trigger);
  };
  var peg$f7 = function (trigger) {
    return new BackCommand(trigger);
  };
  var peg$f8 = function (trigger, subject, toggleState) {
    return new ToggleCommand(trigger, subject, toggleState);
  };
  var peg$f9 = function (subject, toggleState) {
    return new ToggleCommand(undefined, subject, toggleState);
  };
  var peg$f10 = function (trigger, subject) {
    return new SelectCommand(trigger, subject);
  };
  var peg$f11 = function (subject) {
    return new SelectCommand(undefined, subject);
  };
  var peg$f12 = function (trigger, name) {
    return new NameCommand(trigger, name.join(""));
  };
  var peg$f13 = function (trigger, subject) {
    return new MediaCommand(trigger, subject);
  };
  var peg$f14 = function (trigger) {
    return new MediaCommand(trigger, undefined);
  };
  var peg$f15 = function (trigger, subject) {
    return new AnswerCommand(trigger, subject);
  };
  var peg$f16 = function (subject) {
    return new AnswerCommand(undefined, subject);
  };

  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = 0;
  var peg$maxFailExpected = [];
  var peg$silentFails = 0;

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error(
        "Can't start parsing from rule \"" + options.startRule + '".'
      );
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location =
      location !== undefined
        ? location
        : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location =
      location !== undefined
        ? location
        : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return {
      type: "class",
      parts: parts,
      inverted: inverted,
      ignoreCase: ignoreCase,
    };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    return {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) {
      return;
    }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseExpression() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$currPos;
    s3 = peg$currPos;
    peg$silentFails++;
    s4 = peg$parseCommand();
    peg$silentFails--;
    if (s4 === peg$FAILED) {
      s3 = undefined;
    } else {
      peg$currPos = s3;
      s3 = peg$FAILED;
    }
    if (s3 !== peg$FAILED) {
      s4 = peg$parseWhitespace();
      if (s4 !== peg$FAILED) {
        s3 = [s3, s4];
        s2 = s3;
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$currPos;
      s3 = peg$currPos;
      peg$silentFails++;
      s4 = peg$parseCommand();
      peg$silentFails--;
      if (s4 === peg$FAILED) {
        s3 = undefined;
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parseWhitespace();
        if (s4 !== peg$FAILED) {
          s3 = [s3, s4];
          s2 = s3;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    }
    if (input.substr(peg$currPos, 5) === peg$c0) {
      s2 = peg$c0;
      peg$currPos += 5;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) {
        peg$fail(peg$e0);
      }
    }
    if (s2 === peg$FAILED) {
      if (input.substr(peg$currPos, 4) === peg$c1) {
        s2 = peg$c1;
        peg$currPos += 4;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) {
          peg$fail(peg$e1);
        }
      }
      if (s2 === peg$FAILED) {
        if (input.substr(peg$currPos, 5) === peg$c2) {
          s2 = peg$c2;
          peg$currPos += 5;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) {
            peg$fail(peg$e2);
          }
        }
      }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parseWhitespace();
      if (s3 !== peg$FAILED) {
        s4 = peg$parseCommand();
        if (s4 !== peg$FAILED) {
          s5 = [];
          s6 = peg$currPos;
          s7 = peg$currPos;
          peg$silentFails++;
          s8 = peg$parseCommand();
          peg$silentFails--;
          if (s8 === peg$FAILED) {
            s7 = undefined;
          } else {
            peg$currPos = s7;
            s7 = peg$FAILED;
          }
          if (s7 !== peg$FAILED) {
            s8 = peg$parseWhitespace();
            if (s8 !== peg$FAILED) {
              s7 = [s7, s8];
              s6 = s7;
            } else {
              peg$currPos = s6;
              s6 = peg$FAILED;
            }
          } else {
            peg$currPos = s6;
            s6 = peg$FAILED;
          }
          while (s6 !== peg$FAILED) {
            s5.push(s6);
            s6 = peg$currPos;
            s7 = peg$currPos;
            peg$silentFails++;
            s8 = peg$parseCommand();
            peg$silentFails--;
            if (s8 === peg$FAILED) {
              s7 = undefined;
            } else {
              peg$currPos = s7;
              s7 = peg$FAILED;
            }
            if (s7 !== peg$FAILED) {
              s8 = peg$parseWhitespace();
              if (s8 !== peg$FAILED) {
                s7 = [s7, s8];
                s6 = s7;
              } else {
                peg$currPos = s6;
                s6 = peg$FAILED;
              }
            } else {
              peg$currPos = s6;
              s6 = peg$FAILED;
            }
          }
          peg$savedPos = s0;
          s0 = peg$f0(s4);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseCommand() {
    var s0;

    s0 = peg$parseSubjectCommand();
    if (s0 === peg$FAILED) {
      s0 = peg$parseDirectCommand();
    }

    return s0;
  }

  function peg$parseDirectCommand() {
    var s0;

    s0 = peg$parseNameCommand();
    if (s0 === peg$FAILED) {
      s0 = peg$parseStopCommand();
      if (s0 === peg$FAILED) {
        s0 = peg$parseCancelCommand();
        if (s0 === peg$FAILED) {
          s0 = peg$parseWaitCommand();
          if (s0 === peg$FAILED) {
            s0 = peg$parseContinueCommand();
            if (s0 === peg$FAILED) {
              s0 = peg$parseBackCommand();
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseSubjectCommand() {
    var s0;

    s0 = peg$parseNavigateCommand();
    if (s0 === peg$FAILED) {
      s0 = peg$parseToggleCommand();
      if (s0 === peg$FAILED) {
        s0 = peg$parseSelectCommand();
        if (s0 === peg$FAILED) {
          s0 = peg$parseMediaCommand();
          if (s0 === peg$FAILED) {
            s0 = peg$parseAnswerCommand();
          }
        }
      }
    }

    return s0;
  }

  function peg$parseNavigateCommand() {
    var s0;

    s0 = peg$parseNavigateCommandExplicit();
    if (s0 === peg$FAILED) {
      s0 = peg$parseNavigateCommandImplicit();
    }

    return s0;
  }

  function peg$parseNavigateCommandExplicit() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 11) === peg$c3) {
      s1 = peg$c3;
      peg$currPos += 11;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) {
        peg$fail(peg$e3);
      }
    }
    if (s1 === peg$FAILED) {
      if (input.substr(peg$currPos, 5) === peg$c4) {
        s1 = peg$c4;
        peg$currPos += 5;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) {
          peg$fail(peg$e4);
        }
      }
      if (s1 === peg$FAILED) {
        if (input.substr(peg$currPos, 12) === peg$c5) {
          s1 = peg$c5;
          peg$currPos += 12;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) {
            peg$fail(peg$e5);
          }
        }
        if (s1 === peg$FAILED) {
          if (input.substr(peg$currPos, 6) === peg$c6) {
            s1 = peg$c6;
            peg$currPos += 6;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) {
              peg$fail(peg$e6);
            }
          }
          if (s1 === peg$FAILED) {
            if (input.substr(peg$currPos, 7) === peg$c7) {
              s1 = peg$c7;
              peg$currPos += 7;
            } else {
              s1 = peg$FAILED;
              if (peg$silentFails === 0) {
                peg$fail(peg$e7);
              }
            }
            if (s1 === peg$FAILED) {
              if (input.substr(peg$currPos, 10) === peg$c8) {
                s1 = peg$c8;
                peg$currPos += 10;
              } else {
                s1 = peg$FAILED;
                if (peg$silentFails === 0) {
                  peg$fail(peg$e8);
                }
              }
              if (s1 === peg$FAILED) {
                if (input.substr(peg$currPos, 10) === peg$c9) {
                  s1 = peg$c9;
                  peg$currPos += 10;
                } else {
                  s1 = peg$FAILED;
                  if (peg$silentFails === 0) {
                    peg$fail(peg$e9);
                  }
                }
              }
            }
          }
        }
      }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseWhitespace();
      if (s3 !== peg$FAILED) {
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parseWhitespace();
        }
      } else {
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseNavigationSubject();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f1(s1, s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseNavigateCommandImplicit() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parseNavigationSubject();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f2(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseNavigationSubject() {
    var s0;
